Intitial fix for postgres/sqlserver with custom offset storage