@@ -3,17 +3,18 @@
     <parent>
         <groupId>io.debezium</groupId>
         <artifactId>debezium-parent</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.3.0.Final</version>
         <relativePath>../debezium-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>debezium-connector-mongodb</artifactId>
+    <artifactId>debezium-connector-mongodb-local</artifactId>
     <name>Debezium Connector for MongoDB</name>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>io.debezium</groupId>
-            <artifactId>debezium-core</artifactId>
+            <artifactId>debezium-core-local</artifactId>
+            <version>2.3.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -108,7 +109,7 @@
         <!-- 
         Set this property to 'true' in a profile to skip the integration tests and not even run the Docker containers.
         -->
-        <docker.skip>false</docker.skip>
+        <docker.skip>true</docker.skip>
         <docker.exposeContainerInfo>docker.container</docker.exposeContainerInfo>
         <!-- Apicurion container properties -->
         <apicurio.port>8080</apicurio.port>
@@ -125,6 +126,24 @@
     </properties>
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>20</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
